<resources>
    <string name="app_name">YummyCooking</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="button_next">Next</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_asguest">Login As Guest</string>
    <string name="button_Login">Login Now</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="error_username">Username cannot be null</string>
    <string name="action_logout">Log out</string>
    <string name="account">Account</string>
    <string name="description">Hungry?\nYou can do it!</string>
    <string name="title">Title</string>
    <string name="time">Time:</string>
    <string name="cost">Cost:</string>
    <string name="aboutus">ABOUT US</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Vegetarian">Vegetarian</string>
    <string name="Desserts">Desserts</string>
</resources>

