<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    android:layout_margin="8dp"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/food_image"
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="2dp"
            android:elevation="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/food_title"
                android:layout_width="300dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/aladin"
                android:textColor="#8BC34A"
                android:text="@string/title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="28dp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/food_time"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/aladin"
                    android:textColor="#8BC34A"
                    android:text="@string/time"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/food_cost"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/aladin"
                    android:textColor="#8BC34A"
                    android:text="@string/cost"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18dp" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>





</com.google.android.material.card.MaterialCardView>